Added all the new links for the Core pages...

--- a/older.html
+++ b/older.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>OPTECH</title>
+<title>Older persons page</title>
 </head>
 
 <body>
-	<h1>OPTECH</h1>
 	<a href="index.html">Home</a>
 	<a href="partners.html">Partners</a> | 
 	<a href="about.html">About</a> | 
 	<a href="share.html">Share</a> | 
 	<a href="older.html">Older Page</a> | 
 	<a href="edupage.html">EDU Landing Page</a> |
+	<h1>Older persons Landing page</h1>
 </body>
 </html>
