Add almost all the pages to the wireframe

--- a/older.html
+++ b/older.html
@@ -6,12 +6,17 @@
 </head>
 
 <body>
-	<a href="index.html">Home</a>
+	<a href="../OPTECH/index.html">Home</a>
 	<a href="partners.html">Partners</a> | 
 	<a href="about.html">About</a> | 
 	<a href="share.html">Share</a> | 
 	<a href="older.html">Older Page</a> | 
 	<a href="edupage.html">EDU Landing Page</a> |
 	<h1>Older persons Landing page</h1>
+	
+	
+	<a href="older/approach.html">Approach</a> | 
+	<a href="older/interested.html">Interested in Participating</a>
+	
 </body>
 </html>
